--- a/package.json
+++ b/package.json
@@ -23,12 +23,18 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/mongoose": "^10.0.4",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "express-basic-auth": "^1.2.1",
     "joi": "^17.12.1",
     "mongoose": "^8.1.3",
+    "mongoose-paginate-v2": "^1.8.0",
     "morgan": "^1.10.0",
     "nestjs-cls": "^4.1.0",
     "reflect-metadata": "^0.1.13",
