--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.515.0",
+    "@aws-sdk/credential-provider-env": "^3.515.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
@@ -33,10 +35,12 @@
     "class-validator": "^0.14.1",
     "express-basic-auth": "^1.2.1",
     "joi": "^17.12.1",
+    "jwks-rsa": "^3.1.0",
     "mongoose": "^8.1.3",
     "mongoose-paginate-v2": "^1.8.0",
     "morgan": "^1.10.0",
     "nestjs-cls": "^4.1.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "ulid": "^2.3.0"
