--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.515.0",
+    "@aws-sdk/client-s3": "^3.515.0",
     "@aws-sdk/credential-provider-env": "^3.515.0",
+    "@aws-sdk/s3-request-presigner": "^3.515.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
