--- a/.github/workflows/apiDeploy.yml
+++ b/.github/workflows/apiDeploy.yml
@@ -28,7 +28,7 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: dfanso/service-hub-backend:latest 
+        tags: dfanso/task-trek-backend:latest 
         build-args: |
           MONGO_URI=${{ secrets.MONGO_URI }}
           AWS_REGION=${{ secrets.AWS_REGION }}
@@ -46,7 +46,7 @@ jobs:
         username: ${{ secrets.VPS_USERNAME }}
         password: ${{ secrets.VPS_PASSWORD }} 
         script: | 
-          docker pull dfanso/service-hub-backend:latest
-          docker stop service-hub-backend || true
-          docker rm service-hub-backend || true
-          docker run -d --name service-hub-backend -p 9000:9000 dfanso/service-hub-backend:latest
+          docker pull dfanso/task-trek-backend:latest
+          docker stop task-trek-backend || true
+          docker rm task-trek-backend || true
+          docker run -d --name task-trek-backend -p 9000:9000 dfanso/task-trek-backend:latest
