--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task-trek_backend",
+  "name": "quick-quest_backend",
   "version": "0.0.1",
   "description": "",
   "author": "DFanso",
