--- a/.github/workflows/apiDeploy.yml
+++ b/.github/workflows/apiDeploy.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build and Push Docker image
       uses: docker/build-push-action@v2
       with:
-        context: .
+        context: ./API
         file: ./Dockerfile
         push: true
         tags: dfanso/quick-quest_backend:latest 
