--- a/API/package.json
+++ b/API/package.json
@@ -24,6 +24,7 @@
     "@aws-sdk/client-s3": "^3.515.0",
     "@aws-sdk/credential-provider-env": "^3.515.0",
     "@aws-sdk/s3-request-presigner": "^3.515.0",
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
@@ -33,6 +34,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.1",
     "@nestjs/swagger": "^7.3.0",
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
