--- a/API/package.json
+++ b/API/package.json
@@ -39,12 +39,14 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "express-basic-auth": "^1.2.1",
+    "install": "^0.13.0",
     "joi": "^17.12.1",
     "jwks-rsa": "^3.1.0",
     "mongoose": "^8.1.3",
     "mongoose-paginate-v2": "^1.8.0",
     "morgan": "^1.10.0",
     "nestjs-cls": "^4.1.0",
+    "npm": "^10.5.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
