--- a/API/dockerfile
+++ b/API/dockerfile
@@ -10,6 +10,15 @@ ARG AWS_SECRET_ACCESS_KEY
 ARG COGNITO_USER_POOL_ID
 ARG COGNITO_CLIENT_ID
 ARG COGNITO_CLIENT_SECRET
+ARG PAYPAL_CLIENT_ID
+ARG PAYPAL_CLIENT_SECRET
+ARG FRONTEND_URL
+ARG BREVO_SMTP
+ARG BREVO_SMTP_PORT
+ARG BREVO_USER
+ARG BREVO_PASS
+ARG EMAIL_FROM_ADDRESS
+
 
 # Set environment variables
 ENV MONGO_URI=${MONGO_URI}
@@ -20,6 +29,14 @@ ENV AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
 ENV COGNITO_USER_POOL_ID=${COGNITO_USER_POOL_ID} 
 ENV COGNITO_CLIENT_ID=${COGNITO_CLIENT_ID} 
 ENV COGNITO_CLIENT_SECRET=${COGNITO_CLIENT_SECRET}
+ENV PAYPAL_CLIENT_ID=${PAYPAL_CLIENT_ID}
+ENV PAYPAL_CLIENT_SECRET=${PAYPAL_CLIENT_SECRET}
+ENV FRONTEND_URL=${FRONTEND_URL}
+ENV BREVO_SMTP=${BREVO_SMTP}
+ENV BREVO_SMTP_PORT=${BREVO_SMTP_PORT}
+ENV BREVO_USER=${BREVO_USER}
+ENV BREVO_PASS=${BREVO_PASS}
+ENV EMAIL_FROM_ADDRESS=${EMAIL_FROM_ADDRESS}
 
 # Create app directory
 WORKDIR /usr/src/app
@@ -48,6 +65,14 @@ ARG AWS_SECRET_ACCESS_KEY
 ARG COGNITO_USER_POOL_ID
 ARG COGNITO_CLIENT_ID
 ARG COGNITO_CLIENT_SECRET
+ARG PAYPAL_CLIENT_ID
+ARG PAYPAL_CLIENT_SECRET
+ARG FRONTEND_URL
+ARG BREVO_SMTP
+ARG BREVO_SMTP_PORT
+ARG BREVO_USER
+ARG BREVO_PASS
+ARG EMAIL_FROM_ADDRESS
 
 # Set environment variables
 ENV MONGO_URI=${MONGO_URI}
@@ -58,6 +83,14 @@ ENV AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
 ENV COGNITO_USER_POOL_ID=${COGNITO_USER_POOL_ID} 
 ENV COGNITO_CLIENT_ID=${COGNITO_CLIENT_ID} 
 ENV COGNITO_CLIENT_SECRET=${COGNITO_CLIENT_SECRET}
+ENV PAYPAL_CLIENT_ID=${PAYPAL_CLIENT_ID}
+ENV PAYPAL_CLIENT_SECRET=${PAYPAL_CLIENT_SECRET}
+ENV FRONTEND_URL=${FRONTEND_URL}
+ENV BREVO_SMTP=${BREVO_SMTP}
+ENV BREVO_SMTP_PORT=${BREVO_SMTP_PORT}
+ENV BREVO_USER=${BREVO_USER}
+ENV BREVO_PASS=${BREVO_PASS}
+ENV EMAIL_FROM_ADDRESS=${EMAIL_FROM_ADDRESS}
 
 WORKDIR /usr/src/app
 COPY --from=build /usr/src/app/dist ./dist
