--- a/API/package.json
+++ b/API/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "nest build && ncp src/email/templates dist/email/templates",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "dev": "nest start --watch",
@@ -47,6 +47,7 @@
     "mongoose": "^8.1.3",
     "mongoose-paginate-v2": "^1.8.0",
     "morgan": "^1.10.0",
+    "ncp": "^2.0.0",
     "nestjs-cls": "^4.1.0",
     "nodemailer": "^6.9.13",
     "npm": "^10.5.0",
