--- a/API/dockerfile
+++ b/API/dockerfile
@@ -18,6 +18,7 @@ ARG BREVO_SMTP_PORT
 ARG BREVO_USER
 ARG BREVO_PASS
 ARG EMAIL_FROM_ADDRESS
+ARG PAYPAL_REDIRECT_URI
 
 
 # Set environment variables
@@ -37,6 +38,7 @@ ENV BREVO_SMTP_PORT=${BREVO_SMTP_PORT}
 ENV BREVO_USER=${BREVO_USER}
 ENV BREVO_PASS=${BREVO_PASS}
 ENV EMAIL_FROM_ADDRESS=${EMAIL_FROM_ADDRESS}
+ENV PAYPAL_REDIRECT_URI=${PAYPAL_REDIRECT_URI}
 
 # Create app directory
 WORKDIR /usr/src/app
@@ -73,6 +75,7 @@ ARG BREVO_SMTP_PORT
 ARG BREVO_USER
 ARG BREVO_PASS
 ARG EMAIL_FROM_ADDRESS
+ARG PAYPAL_REDIRECT_URI
 
 # Set environment variables
 ENV MONGO_URI=${MONGO_URI}
@@ -91,6 +94,7 @@ ENV BREVO_SMTP_PORT=${BREVO_SMTP_PORT}
 ENV BREVO_USER=${BREVO_USER}
 ENV BREVO_PASS=${BREVO_PASS}
 ENV EMAIL_FROM_ADDRESS=${EMAIL_FROM_ADDRESS}
+ENV PAYPAL_REDIRECT_URI=${PAYPAL_REDIRECT_URI}
 
 WORKDIR /usr/src/app
 COPY --from=build /usr/src/app/dist ./dist
