--- a/API/dockerfile
+++ b/API/dockerfile
@@ -19,6 +19,8 @@ ARG BREVO_USER
 ARG BREVO_PASS
 ARG EMAIL_FROM_ADDRESS
 ARG PAYPAL_REDIRECT_URI
+ARG COGNITO_CALLBACK_URL
+ARG COGNITO_DOMAIN
 
 
 # Set environment variables
@@ -39,6 +41,8 @@ ENV BREVO_USER=${BREVO_USER}
 ENV BREVO_PASS=${BREVO_PASS}
 ENV EMAIL_FROM_ADDRESS=${EMAIL_FROM_ADDRESS}
 ENV PAYPAL_REDIRECT_URI=${PAYPAL_REDIRECT_URI}
+ENV COGNITO_CALLBACK_URL=${COGNITO_CALLBACK_URL}
+ENV COGNITO_DOMAIN=${COGNITO_DOMAIN}
 
 # Create app directory
 WORKDIR /usr/src/app
@@ -76,6 +80,8 @@ ARG BREVO_USER
 ARG BREVO_PASS
 ARG EMAIL_FROM_ADDRESS
 ARG PAYPAL_REDIRECT_URI
+ARG COGNITO_CALLBACK_URL
+ARG COGNITO_DOMAIN
 
 # Set environment variables
 ENV MONGO_URI=${MONGO_URI}
@@ -95,6 +101,8 @@ ENV BREVO_USER=${BREVO_USER}
 ENV BREVO_PASS=${BREVO_PASS}
 ENV EMAIL_FROM_ADDRESS=${EMAIL_FROM_ADDRESS}
 ENV PAYPAL_REDIRECT_URI=${PAYPAL_REDIRECT_URI}
+ENV COGNITO_CALLBACK_URL=${COGNITO_CALLBACK_URL}
+ENV COGNITO_DOMAIN=${COGNITO_DOMAIN}
 
 WORKDIR /usr/src/app
 COPY --from=build /usr/src/app/dist ./dist
