--- a/.github/workflows/recEngineDeploy.yml
+++ b/.github/workflows/recEngineDeploy.yml
@@ -25,8 +25,8 @@ jobs:
     - name: Build and Push Docker image
       uses: docker/build-push-action@v2
       with:
-        context: ./
-        file: ./Dockerfile
+        context: ./RecommenderEngine
+        file: ./RecommenderEngine/Dockerfile
         push: true
         tags: dfanso/recommender-engine:latest
         build-args: |
