--- a/API/dockerfile
+++ b/API/dockerfile
@@ -21,6 +21,7 @@ ARG EMAIL_FROM_ADDRESS
 ARG PAYPAL_REDIRECT_URI
 ARG COGNITO_CALLBACK_URL
 ARG COGNITO_DOMAIN
+ARG RECOMMENDATION_ENGINE_API
 
 
 # Set environment variables
@@ -43,6 +44,7 @@ ENV EMAIL_FROM_ADDRESS=${EMAIL_FROM_ADDRESS}
 ENV PAYPAL_REDIRECT_URI=${PAYPAL_REDIRECT_URI}
 ENV COGNITO_CALLBACK_URL=${COGNITO_CALLBACK_URL}
 ENV COGNITO_DOMAIN=${COGNITO_DOMAIN}
+ENV RECOMMENDATION_ENGINE_API=${RECOMMENDATION_ENGINE_API}
 
 # Create app directory
 WORKDIR /usr/src/app
@@ -82,6 +84,7 @@ ARG EMAIL_FROM_ADDRESS
 ARG PAYPAL_REDIRECT_URI
 ARG COGNITO_CALLBACK_URL
 ARG COGNITO_DOMAIN
+ARG RECOMMENDATION_ENGINE_API
 
 # Set environment variables
 ENV MONGO_URI=${MONGO_URI}
@@ -103,6 +106,7 @@ ENV EMAIL_FROM_ADDRESS=${EMAIL_FROM_ADDRESS}
 ENV PAYPAL_REDIRECT_URI=${PAYPAL_REDIRECT_URI}
 ENV COGNITO_CALLBACK_URL=${COGNITO_CALLBACK_URL}
 ENV COGNITO_DOMAIN=${COGNITO_DOMAIN}
+ENV RECOMMENDATION_ENGINE_API=${RECOMMENDATION_ENGINE_API}
 
 WORKDIR /usr/src/app
 COPY --from=build /usr/src/app/dist ./dist
