--- a/customer/package.json
+++ b/customer/package.json
@@ -26,7 +26,8 @@
     "react-map-gl": "^7.1.7",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
-    "sweetalert2": "^11.10.7"
+    "sweetalert2": "^11.10.7",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
