--- a/customer/package.json
+++ b/customer/package.json
@@ -17,7 +17,7 @@
     "axios": "^1.6.8",
     "isomorphic-unfetch": "^4.0.2",
     "leaflet": "^1.9.4",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
